@@ -18,8 +18,6 @@ my @cases = (
              [ uid => 1000, gid => 1000, protocols => ['pop', 'imap'], openchange => 1, firstValidUid => 1000,
                firstValidGid => 1000, mailboxesDir => '/var/mail', postmasterAddress => 'postmaster@example.com',
                antispamPlugin => {name => 'amavis'},
-               openchangePlugin => {enabled => 1, host => 'broker.local', port => 1234, user => 'user1', pass => 'pass',
-                                    vhost => 'broker-vhost.local', 'exchange' => 'exchange_scks', 'routing' => 'routingKey'},
                keytabPath => '/var/keytab', gssapiHostname => { value1 => 'gssapiHostname' } ],
             );
 
