@@ -1,4 +1,5 @@
 HEAD
+	+ Remove deprecated OpenChange notifications plugin in dovecot.conf
 	+ Remove external AD integration
 	+ Use always external mailfilter if configured instead of no longer
 	  maintained Zentyal mailfilter module
